--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="container">
                   <div class="row align-items-center">
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-7 col-xl-7 col-xxl-7">
-                      <h1 class="mb-0 my-2 fw-bold wow fadeInUp" data-wow-delay="1s">APAX DRAFT</h1>
+                      <h1 class="mb-0 my-2 fw-bold wow fadeInUp" data-wow-delay="1s">APAX DRAFT UPDATED</h1>
                       <p class="text-light mb-0 my-2 wow fadeInUp" data-wow-delay="1.3s">Similique est sit quod debitis architecto, fugiat atque a quo aliquid numquam fugit ducimus.</p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-5 col-xxl-5">
