new page web dev - Created

--- a/get-quote.html
+++ b/get-quote.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="">NEW LINK</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="">NEW LINK</a>
+              <a class="nav-link" href="services/web-development.html">SERVICES</a>
             </li>
             <li class="nav-item px-2">
               <a class="nav-link active" href="get-quote.html">GET QUOTE</a>
@@ -217,6 +217,8 @@
     <script src="assets/library/fa/js/all.min.js"></script>
     <script src="assets/library/wow/wow.min.js"></script>
     <script src="assets/library/owlcarousel/owl.carousel.min.js"></script>
+    <script src="assets/library/counterup/counterup.min.js"></script>
+    <script src="assets/library/waypoints/waypoints.min.js"></script>
     <!-- custom js -->
     <script src="assets/library/custom/js/main.js"></script>
   </body>
